fix: TerminalView focusable + GitHub Releases for APK download
Critical fixes:
- Add setFocusable(true) and setFocusableInTouchMode(true) to
  programmatically created TerminalViews (initial + split panes)
  Fixes: keyboard input not working at all

Features:
- Upload APK to GitHub Releases (nightly-split-* tags)
  Releases provide direct APK download URLs (no zip, no auth)
- Update Java download code to use GitHub Releases API
  instead of gh CLI (no external dependency)
- Falls back to finding latest nightly-split release
  and downloading the APK asset directly